--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="left-header">
             <i class="bi bi-list"></i>
-            <span ><img class="logo" src="assets/img/youtube.png" alt=""></span>
+            <a href="index2.html"><span ><img class="logo" src="assets/img/youtube.png" alt=""></span></a>
         </div>
 
         <div class="search">
